# civetweb

./: CMakeLists.txt  Makefile
cmake/: FindLibM.cmake  FindWinSock.cmake
docs/: Building.md
examples/embedded_c/: Makefile  embedded_c.c
src/: civetweb.c  external_log_access.inl  main.c
zephyr/: CMakeLists.txt  prj.conf
